[FIX]poster1.jpg

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ https://www.tooplate.com/view/2083-steak-house
         <!-- flexslider -->
         <div class="flexslider">
           <ul class="slides">
-            <img src="images/poster1.JPG" style="width:300px; margin:0 auto; " class="img-responsive" alt="About">
+            <img src="images/poster1.jpg" style="width:300px; margin:0 auto; " class="img-responsive" alt="About">
             <p style="position:relative; left:100px;"><b>[그린캠퍼스를 위한 성균인의 실천방안]</b></p>
           </ul>
           </div>
