--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ https://www.tooplate.com/view/2083-steak-house
       <div class="row">
           <div class="col-md-offset-2 col-md-8 col-sm-12">
               <h1 class="wow fadeInUp" style="color:white;" data-wow-delay="0.6s"><b>OH!MIJA</b></h1>
-              <h2 class="wow fadeInUp" style="color: white;" data-wow-delay="1.0s">"For a Sustainable Campus With Energy"</h2>
+              <h2 class="wow fadeInUp" style="color: white;" data-wow-delay="1.0s">"For a Sustainable Campus <br>With Energy"</h2>
               <p class="wow fadeInUp" style="color:white;" data-wow-delay="1.3s">Creating a voluntary energy-saving culture focusing on improving awareness among students</p>
               <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.6s">Let's Go!</a>
           </div>
