--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ https://www.tooplate.com/view/2083-steak-house
         </div>
 
         <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
-          <img src="img/img_nsc.jpg" usemap="#image-map" style="width:100%; height:300px;">
+          <img src="img/img_nsc.jpg" usemap="#image-map" style="width:100%; height:auto;">
           <map name="image-map">
             <area target="" alt="의학관" title="03" href="img/map/3.png" coords="392,316,418,313,495,294,500,301,518,289,498,272,493,256,479,248,381,274,380,292" shape="poly" onmouseover="this.style.background='red';" onmouseout="this.style.color='transparent';"/>
 <!--            <area target="" alt="47" title="47" href="img/map/4" coords="755,237,784,224,795,211,828,200,830,174,810,172,785,181,776,193,749,207,745,227" shape="poly">-->
