--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@ https://www.tooplate.com/view/2083-steak-house
   $('img[usemap]').rwdImageMaps();
 </script>
 
-
+<script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
